<resources>
    <string name="app_name">随手印</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="search">搜索</string>
    <string name="submit">提交</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>

    <string-array name="shop_location_array">
        <item>杭州</item>
        <item>上海</item>
        <item>北京</item>
    </string-array>
    <string name="shop_discount_left">剩余消费券：</string>
    <string name="shop_search_hint">请输入商户名、分类、地点</string>

    <string name="user_center_yun_money">云币余额：</string>
    <string name="user_center_discount">消费券余额：</string>
    <string name="user_center_get_yun_money">赚取云币</string>
    <string name="user_center_recharge_online">在线充值 </string>

    <string name="micro_lib_search">搜索</string>
    <string name="micro_lib_yun_money">剩余云币：</string>

    <string name="social_publish">发布</string>
    <string name="social_name">互动小站</string>
    <string name="social_post">帖子：</string>
    <string name="social_talent">达人：</string>

    <string name="document_type">文档类型</string>
    <string name="document_local">本地文档</string>
    <string name="document_yun_storage">云储存</string>
    <string name="document_download">已下载</string>
    <string name="document_print">我要打印</string>
    <string name="document_other">其他</string>
    <string name="document_category">浏览目录</string>
    <string name="document_common_soft">常见软件</string>

    <string name="upload_file_waiting_print">待打印</string>
    <string name="upload_file_uploading_speed">上传速度</string>
    <string name="upload_file_done">已完成</string>

    <string name="share_links_to_get_money">分享链接+10云币</string>

    <string name="visit_shop_to_get_money">访问商家+5云币</string>

    <string name="user_info_input_name_hint">请输入您的名字</string>
    <string name="user_info_input_birthday_hint">请选择您的生日</string>
    <string name="user_info_input_telephone_hint">请输入您的手机号</string>
    <string name="user_info_input_address_hint">请输入您的详细地址</string>
    <string name="user_info_male">男</string>
    <string name="user_info_female">女</string>
    <string name="user_info_save">保存修改</string>

    <string name="recharge_online_recharge_money">云币充值</string>
    <string name="recharge_online_pay_by_friend">朋友代付</string>
    <string name="recharge_online_open_service">服务开通</string>
    <string name="recharge_online_money_left">余额：</string>
    <string name="recharge_online_yun_money">云币</string>
    <string name="recharge_online_right_away">立即充值</string>
    <string name="recharge_online_input_account_hint">请输入您的账号</string>
    <string name="recharge_online_yuan">元</string>

    <string name="earn_money_share">分享链接赚云币</string>
    <string name="earn_money_favor">关注商家赚云币</string>
    <string name="earn_money_scan">扫条形码赚云币</string>
    <string name="earn_money_sign_in">每日签到</string>
    <string name="earn_money_task">云币任务</string>
    <string name="earn_money_complete_info">完善资料</string>
    <string name="earn_money_recommend">推荐好友</string>

    <string name="shop_detail_book">免预约</string>
    <string name="shop_detail_nearest">离我最近</string>
    <string name="shop_detail_validate_time">有效期</string>
    <string name="shop_detail_book_info">预约信息</string>
    <string name="shop_detail_rules">规则提醒</string>
    <string name="shop_detail_service">商家服务</string>

</resources>
