<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuncool.yun_android.Activity.FileUploadActivity">

    <com.yuncool.yun_android.view.CustomerTabView
        android:id="@+id/ctv_upload_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="@string/upload_file_waiting_print"
        app:middleText="@string/upload_file_uploading_speed"
        app:rightText="@string/upload_file_done">

    </com.yuncool.yun_android.view.CustomerTabView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctv_upload_file"
        android:layout_marginTop="20dp">

    </android.support.v7.widget.RecyclerView>

    <ImageView
        android:id="@+id/iv_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ctv_upload_file"
        android:layout_centerInParent="true"
        android:src="@drawable/no_file" />

</RelativeLayout>
