<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuncool.yun_android.Activity.SocialActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorTextHint">

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/view_normal_space"
            android:text="@string/social_publish"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_normal_space"
            android:layout_marginTop="80dp"
            android:text="@string/social_name"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_post"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_social"
            android:layout_below="@+id/tv_social"
            android:layout_marginTop="@dimen/view_small_space"
            android:text="@string/social_post"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_post_number"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_post"
            android:layout_toRightOf="@id/tv_post"
            android:text="123"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_talent"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_social"
            android:layout_marginLeft="@dimen/view_small_space"
            android:layout_marginTop="@dimen/view_small_space"
            android:layout_toRightOf="@id/tv_post_number"
            android:text="@string/social_talent"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_talent_number"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_post"
            android:layout_toRightOf="@id/tv_talent"
            android:text="50"
            android:textColor="@android:color/white" />


        <ImageButton
            android:id="@+id/ib_talent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/view_normal_space"
            android:background="@null"
            android:src="@drawable/talent" />


        <ImageButton
            android:id="@+id/ib_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/view_normal_space"
            android:layout_toRightOf="@+id/ib_talent"
            android:background="@null"
            android:src="@drawable/sign" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_large_space"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_get_yun_money"
            style="@style/InputWithLeftIconRightArrowStyle"
            android:drawableLeft="@drawable/money"
            android:text="过年七天乐，急赢好礼" />

        <View style="@style/LineWithMarginLeftStyle" />

        <TextView
            android:id="@+id/tv_recharge_online"
            style="@style/InputWithLeftIconRightArrowStyle"
            android:drawableLeft="@drawable/recharge"
            android:text="#送福利啦#" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_large_space">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
